<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Parques"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Parques" />
        <item
            android:id="@+id/nav_ListadoParques"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_ListadoParques" />
        <item
            android:id="@+id/nav_Guardabosques"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Guardabosques" />
        <item
            android:id="@+id/nav_listadoGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/baseline_park_24"
            android:title="@string/menu_ListadoGuardabosques" />
    </group>
</menu>