<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Parques">

    <fragment
        android:id="@+id/nav_Parques"
        android:name="com.example.practica9almacenamientosqlite.ui.home.HomeFragment"
        android:label="@string/menu_Parques"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_ListadoParques"
        android:name="com.example.practica9almacenamientosqlite.ui.gallery.GalleryFragment"
        android:label="@string/menu_ListadoParques"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_Guardabosques"
        android:name="com.example.practica9almacenamientosqlite.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Guardabosques"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_listadoGuarda"
        android:name="com.example.practica9almacenamientosqlite.ListadoGuarda"
        android:label="fragmen_Guarda"
        tools:layout="@layout/fragment_listado_guarda" />
</navigation>