<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/parques"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editIDParque"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/numero"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTamanio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:hint="@string/tamanio"
            android:inputType="numberDecimal" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:id="@+id/cbJuego"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/juegos" />

            <CheckBox
                android:id="@+id/cbReposo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espacios" />
        </com.google.android.material.chip.ChipGroup>

        <Spinner
            android:id="@+id/spnHorario"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/marcaredonda" />

        <RadioGroup
            android:id="@+id/RadioParques"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbLineales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/lineales" />

            <RadioButton
                android:id="@+id/rbVirtuales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/virtuales" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_add_24"
                app:backgroundTint="#4CAF50" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_search_24"
                app:backgroundTint="#CDDC39" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnActualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_update_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_delete_24"
                app:backgroundTint="#F44336" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>