<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/menu_Guardabosques"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/IDNombreGuarda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="Numero de Guardia"
            android:inputType="number" />

        <EditText
            android:id="@+id/editSueldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:hint="@string/sueldo"
            android:inputType="numberDecimal" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ChipGroupAnimales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:id="@+id/cbAlimentar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:text="@string/alimentarAnimales" />

            <CheckBox
                android:id="@+id/cbBañar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bañarAnimales" />
        </com.google.android.material.chip.ChipGroup>

        <Spinner
            android:id="@+id/spnAcciones"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/marcaredonda" />

        <RadioGroup
            android:id="@+id/RadioGroupGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/generoMas" />

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generoFem" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnInsertar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_add_24"
                app:backgroundTint="#4CAF50" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnBuscar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_search_24"
                app:backgroundTint="#CDDC39" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnActualizar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_update_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEliminar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/baseline_delete_24"
                app:backgroundTint="#F44336" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>